--- a/library1/library1/library1.csproj
+++ b/library1/library1/library1.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\CartItemsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ShoppingCartsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
