--- a/library1/library1/bin/library1.dll.config
+++ b/library1/library1/bin/library1.dll.config
@@ -57,9 +57,12 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
+    <add name="library1Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=library1Context-20240910010207; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|library1Context-20240910010207.mdf" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Context-20240910010657; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Context-20240910010657.mdf" providerName="System.Data.SqlClient" />
     <add name="libraryEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9OGKTK28\SQLEXPRESS01;initial catalog=library;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="libraryEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9OGKTK28\SQLEXPRESS01;initial catalog=library;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="libraryEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9OGKTK28\SQLEXPRESS01;initial catalog=library;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="libraryEntities3" connectionString="metadata=res://*/Models.library1.csdl|res://*/Models.library1.ssdl|res://*/Models.library1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9OGKTK28\SQLEXPRESS01;initial catalog=library;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
