--- a/Bookshop/Bookshop/Bookshop.csproj
+++ b/Bookshop/Bookshop/Bookshop.csproj
@@ -332,6 +332,7 @@
     <Content Include="templates\icomoon\fonts\icomoon.ttf" />
     <Content Include="templates\icomoon\fonts\icomoon.woff" />
     <Content Include="templates\icomoon\selection.json" />
+    <Content Include="Views\Categories\BooksByCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
