--- a/Bookshop/Bookshop/Bookshop.csproj
+++ b/Bookshop/Bookshop/Bookshop.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Models\Category.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoryBookViewModel.cs" />
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -305,7 +306,6 @@
     <Content Include="Views\Admins\Index.cshtml" />
     <Content Include="Views\Books\Create.cshtml" />
     <Content Include="Views\Books\Delete.cshtml" />
-    <Content Include="Views\Books\Details.cshtml" />
     <Content Include="Views\Books\Edit.cshtml" />
     <Content Include="Views\Books\Index.cshtml" />
     <Content Include="Views\CartItems\Create.cshtml" />
@@ -333,6 +333,7 @@
     <Content Include="templates\icomoon\fonts\icomoon.woff" />
     <Content Include="templates\icomoon\selection.json" />
     <Content Include="Views\Categories\BooksByCategory.cshtml" />
+    <Content Include="Views\Books\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
