--- a/Bookshop1/Bookshop1/Web.config
+++ b/Bookshop1/Bookshop1/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
 	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=LAPTOP-9OGKTK28\SQLEXPRESS01\MSSQLLocalDB;Initial Catalog=aspnet-Bookshop1-20240927031612;Integrated Security=True" providerName="System.Data.SqlClient" />
-		<add name="libraryEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9OGKTK28\SQLEXPRESS01;initial catalog=library;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="DefaultConnection" connectionString="Data Source=LAPTOP-OJL01FMR\SQLEXPRESS\MSSQLLocalDB;Initial Catalog=Bookshop;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="libraryEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-OJL01FMR\SQLEXPRESS;initial catalog=library;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
